--- a/Dockerfile.client
+++ b/Dockerfile.client
@@ -10,5 +10,13 @@ RUN yarn build
 
 # Build step #2: build an nginx container
 FROM nginx:stable-alpine
+
+ARG REACT_APP_AUTH0_DOMAIN
+ARG REACT_APP_AUTH0_CLIENT_ID
+
+ENV REACT_APP_AUTH0_DOMAIN $REACT_APP_AUTH0_DOMAIN
+ENV REACT_APP_AUTH0_CLIENT_ID $REACT_APP_AUTH0_CLIENT_ID
+
 COPY --from=build-step /app/build /usr/share/nginx/html
 COPY deployment/nginx.default.conf /etc/nginx/conf.d/default.conf
+
