--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,27 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.api
+      args:
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+      - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
+      - FLASK_SECRET_KEY=${FLASK_SECRET_KEY}
+    environment:
+    - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+    - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+    - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
+    - FLASK_SECRET_KEY=${FLASK_SECRET_KEY}
     image: react-flask-app-api
   client:
     build:
       context: .
       dockerfile: Dockerfile.client
+      args:
+      - REACT_APP_AUTH0_DOMAIN=${REACT_APP_AUTH0_DOMAIN}
+      - REACT_APP_AUTH0_CLIENT_ID=${REACT_APP_AUTH0_CLIENT_ID}
+    environment:
+    - REACT_APP_AUTH0_DOMAIN=${REACT_APP_AUTH0_DOMAIN}
+    - REACT_APP_AUTH0_CLIENT_ID=${REACT_APP_AUTH0_CLIENT_ID}
     image: react-flask-app-client
     ports:
-      - "80:80"
+      - "5000:5000"
