--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -62,14 +62,18 @@ jobs:
         # Build a docker container and
         # push it to ECR so that it can
         # be deployed to ECS.
+        echo "${{ secrets.FLASK_SECRET_KEY }}"
+        echo "Starting build"
         docker-compose build --build-arg AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID }}" \
             --build-arg AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY }}" \
             --build-arg AWS_DEFAULT_REGION="${{ secrets.AWS_DEFAULT_REGION }}" \
-            --build-arg FLASK_SECRET_KEY="${{ secrets.FLASK_SECRET_KEY }}" \
-            --build-arg REACT_APP_AUTH0_DOMAIN="${{ secrets.REACT_APP_AUTH0_DOMAIN }}" \
-            --build-arg REACT_APP_AUTH0_CLIENT_ID="${{ secrets.REACT_APP_AUTH0_CLIENT_ID }}" \
+            #--build-arg FLASK_SECRET_KEY="${{ secrets.FLASK_SECRET_KEY }}" \
+            #--build-arg REACT_APP_AUTH0_DOMAIN="${{ secrets.REACT_APP_AUTH0_DOMAIN }}" \
+            #--build-arg REACT_APP_AUTH0_CLIENT_ID="${{ secrets.REACT_APP_AUTH0_CLIENT_ID }}" \
             -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+        echo "Done with build"
         docker-compose push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        echo "Done with push"
         echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
     - name: Fill in the new image ID in the Amazon ECS task definition
       id: task-def
