--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -113,7 +113,7 @@ jobs:
     - name: Deploy Amazon ECS task definition
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
       with:
-        task-definition: ${{ steps.task-def.outputs.task-definition }}
+        task-definition: aws-task-definition.json
         service: pronk-prototype-service
         cluster: pronk-prototype-cluster
         wait-for-service-stability: true
