--- a/Dockerfile.client
+++ b/Dockerfile.client
@@ -17,6 +17,8 @@ ARG REACT_APP_AUTH0_CLIENT_ID
 ENV REACT_APP_AUTH0_DOMAIN $REACT_APP_AUTH0_DOMAIN
 ENV REACT_APP_AUTH0_CLIENT_ID $REACT_APP_AUTH0_CLIENT_ID
 
+EXPOSE 5000
+
 COPY --from=build-step /app/build /usr/share/nginx/html
 COPY deployment/nginx.default.conf /etc/nginx/conf.d/default.conf
 
