--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -100,7 +100,7 @@ jobs:
             --build-arg REACT_APP_AUTH0_CLIENT_ID=$REACT_APP_AUTH0_CLIENT_ID \
             -f Dockerfile.client -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-        echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+        echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG:latest"
 
     - name: Fill in the new image ID in the Amazon ECS task definition
       id: task-def-frontend
