--- a/deployment/nginx.default.conf
+++ b/deployment/nginx.default.conf
@@ -16,5 +16,7 @@ server {
         add_header Cache-Control "public";
     }
 
-
+    location /api {
+        proxy_pass http://api:4500;
+    }
 }
