--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,11 +10,19 @@ services:
       - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
       - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
       - FLASK_SECRET_KEY=${FLASK_SECRET_KEY}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PW=${POSTGRES_PW}
+      - POSTGRES_URL=${POSTGRES_URL}
+      - POSTGRES_DB=${POSTGRES_DB}
     environment:
     - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
     - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
     - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
     - FLASK_SECRET_KEY=${FLASK_SECRET_KEY}
+    - POSTGRES_USER=${POSTGRES_USER}
+    - POSTGRES_PW=${POSTGRES_PW}
+    - POSTGRES_URL=${POSTGRES_URL}
+    - POSTGRES_DB=${POSTGRES_DB}
     image: react-flask-app-api
   client:
     build:
