--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -37,6 +37,8 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
 
+    timeout-minutes: 10
+
     steps:
     - name: Checkout
       uses: actions/checkout@v2
