--- a/Dockerfile.client
+++ b/Dockerfile.client
@@ -5,18 +5,23 @@ ENV PATH /app/node_modules/.bin:$PATH
 COPY package.json yarn.lock ./
 COPY ./src ./src
 COPY ./public ./public
+
+ARG REACT_APP_AUTH0_DOMAIN
+ARG REACT_APP_AUTH0_CLIENT_ID
+
+ENV REACT_APP_AUTH0_DOMAIN "dev-42pt-q39.eu.auth0.com"
+ENV REACT_APP_AUTH0_CLIENT_ID $REACT_APP_AUTH0_CLIENT_ID
+
 RUN yarn install
 RUN yarn build
 
 # Build step #2: build an nginx container
 FROM nginx:stable-alpine
 
-ARG REACT_APP_AUTH0_DOMAIN
-ARG REACT_APP_AUTH0_CLIENT_ID
-
-ENV REACT_APP_AUTH0_DOMAIN $REACT_APP_AUTH0_DOMAIN
-ENV REACT_APP_AUTH0_CLIENT_ID $REACT_APP_AUTH0_CLIENT_ID
+EXPOSE 5000
 
 COPY --from=build-step /app/build /usr/share/nginx/html
 COPY deployment/nginx.default.conf /etc/nginx/conf.d/default.conf
+
+
 
