--- a/Dockerfile.client
+++ b/Dockerfile.client
@@ -9,7 +9,7 @@ COPY ./public ./public
 ARG REACT_APP_AUTH0_DOMAIN
 ARG REACT_APP_AUTH0_CLIENT_ID
 
-ENV REACT_APP_AUTH0_DOMAIN "dev-42pt-q39.eu.auth0.com"
+ENV REACT_APP_AUTH0_DOMAIN $REACT_APP_AUTH0_DOMAIN
 ENV REACT_APP_AUTH0_CLIENT_ID $REACT_APP_AUTH0_CLIENT_ID
 
 RUN yarn install
