Add note db (#5)
* Add upload skeleton

* Add file upload capability

* Add s3 video upload & get link

* Upgrade db removing transcript location

* Migrate db to int transcription status

* Add transcription

* Install requests

* Finished transcription!

* Add functions to get transcript lines, and lines for tags

* add back button on NOte

* Handle video existence toggling

* Add transcription back-end endpoint

* Add code for tag toggle

* Add transcript text output

* Add video player

* add skeleton for editable title

* get rid of unnecessary app printouts

* Add click to title to modify it

* Add editable title

* Add new aws task definition

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,13 @@
 
 .env
 
+# for development we might have some mp4 files hanging around
+*.mp4
+
 # python relate
 venv
 __pycache__
+nbs
 
 # dependencies
 /node_modules
