--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,21 +1,30 @@
 alembic==1.6.5
+boto3==1.18.26
+botocore==1.21.26
+certifi==2021.5.30
+charset-normalizer==2.0.4
 click==8.0.1
 Flask==2.0.1
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.1
 gunicorn==20.1.0
+idna==3.2
 importlib-metadata==4.6.4
 itsdangerous==2.0.1
 Jinja2==3.0.1
+jmespath==0.10.0
 Mako==1.1.4
 MarkupSafe==2.0.1
 psycopg2==2.9.1
 python-dateutil==2.8.2
 python-dotenv==0.19.0
 python-editor==1.0.4
+requests==2.26.0
+s3transfer==0.5.0
 six==1.16.0
 SQLAlchemy==1.4.22
 typing-extensions==3.10.0.0
+urllib3==1.26.6
 Werkzeug==2.0.1
 zipp==3.5.0
